website/versioned_docs/version-4.0.0-alpha.13/client/client-overview.md
---
id: version-4.0.0-alpha.13-client-overview
title: Client Overview
original_id: client-overview
---

GraphQL Kotlin provides a set of lightweight type-safe GraphQL HTTP clients. The library provides [Ktor HTTP client](https://ktor.io/clients/index.html)
and [Spring WebClient](https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-webclient)
based reference implementations as well as allows for custom implementations using other engines, see [client customization](client-customization.md)
documentation for additional details. Type-safe data models are generated at build time by the GraphQL Kotlin [Gradle](../plugins/gradle-plugin-tasks.md)
and [Maven](../plugins/maven-plugin-goals.md) plugins.

Client Features:
* Supports query and mutation operations
* Supports batch operations
* Automatic generation of type-safe Kotlin models
* Custom scalar support - defaults to String but can be configured to deserialize to specific types
* Supports default enum values to gracefully handle new/unknown server values
* Native support for coroutines
* Easily configurable Ktor and Spring WebClient based HTTP Clients
* Documentation generated from the underlying GraphQL schema

## Project Configuration

GraphQL Kotlin provides both Gradle and Maven plugins to automatically generate your client code at build time. In order
to auto-generate the client code, plugins require target GraphQL schema and a list of query files to process.

GraphQL schema can be provided as

* result of introspection query (default)
* downloaded from an SDL endpoint
* local file

See [Gradle](https://expediagroup.github.io/graphql-kotlin/docs/plugins/gradle-plugin) and [Maven](https://expediagroup.github.io/graphql-kotlin/docs/plugins/maven-plugin)
plugin documentation for additional details.

GraphQL Kotlin plugins generated classes are simple POJOs that implement `GraphQLClientRequest` and optionally accept variables
(only if underlying operation uses variables) as a constructor parameter. While `GraphQLClient` exposes generic methods
that allow you to execute either a single or batch request, plugins will also automatically generate a convenient `execute<OperationName>`
extension function that returns target operation result type.

> NOTE: If you are going to be using one of the reference client implementations it is highly recommended to also configure the
plugin to generate client type specific extension code that will allow you to return operation specific type. See [client customization](client-customization.md)
> for additional details.

Example below configures the project to use introspection query to obtain the schema and uses Ktor based HTTP client.

### Build Configuration

<!--DOCUSAURUS_CODE_TABS-->
<!--Gradle-->

Basic `build.gradle.kts` Gradle configuration that executes introspection query against specified endpoint to obtain target
schema and then generate the clients under `com.example.generated` package name:

```kotlin
import com.expediagroup.graphql.plugin.gradle.config.GraphQLClientType
import com.expediagroup.graphql.plugin.gradle.graphql

plugins {
    id("com.expediagroup.graphql") version $latestGraphQLKotlinVersion
}

dependencies {
  implementation("com.expediagroup:graphql-kotlin-ktor-client:$latestGraphQLKotlinVersion")
}

graphql {
    client {
        endpoint = "http://localhost:8080/graphql"
        packageName = "com.example.generated"
        clientType = GraphQLClientType.KTOR
    }
}
```

<!--Maven-->

Basic Maven `pom.xml` configuration that executes introspection query against specified endpoint to obtain target
schema and then generate the clients under `com.example.generated` package name:

```xml
<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>graphql-kotlin-maven-client-example</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <graphql-kotlin.version>$latestGraphQLKotlinVersion</graphql-kotlin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.expediagroup</groupId>
            <artifactId>graphql-kotlin-ktor-client</artifactId>
            <version>${graphql-kotlin.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.expediagroup</groupId>
                <artifactId>graphql-kotlin-maven-plugin</artifactId>
                <version>${graphql-kotlin.version}</version>
                <executions>
                    <execution>
                        <id>generate-graphql-client</id>
                        <goals>
                            <goal>introspectSchema</goal>
                            <goal>generateClient</goal>
                        </goals>
                        <configuration>
                            <endpoint>http://localhost:8080/graphql</endpoint>
                            <packageName>com.example.generated</packageName>
                            <schemaFile>${project.build.directory}/schema.graphql</schemaFile>
                            <clientType>KTOR</clientType>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
```

<!--END_DOCUSAURUS_CODE_TABS-->

See [graphql-kotlin-client-example](https://github.com/ExpediaGroup/graphql-kotlin/tree/master/examples/client) project for complete
working examples of Gradle and Maven based projects.

### Generating GraphQL Operations

By default, GraphQL Kotlin build plugins will attempt to generate GraphQL operations from all `*.graphql` files located under
`src/main/resources`. Operations are validated against the target GraphQL schema, which can be manually provided, retrieved by
the plugins through introspection (as configured in examples above) or downloaded directly from a custom SDL endpoint.
See our documentation for more details on supported [Gradle tasks](../plugins/gradle-plugin-tasks.md)
and [Maven Mojos](../plugins/maven-plugin-goals.md).

When creating your GraphQL operations make sure to always specify an operation name and name the files accordingly. Each
one of your GraphQL operation files will generate a corresponding Kotlin file with a class matching your operation
name that will act as a wrapper for all corresponding data classes. For example, given `HelloWorldQuery.graphql` with
`HelloWorldQuery` as the operation name, GraphQL Kotlin plugins will generate a corresponding `HelloWorldQuery.kt` file
with a `HelloWorldQuery` class under the configured package.

For example, given a simple schema

```graphql
type Query {
  helloWorld: String
}
```

And a corresponding `HelloWorldQuery.graphql` query

```graphql
query HelloWorldQuery {
  helloWorld
}
```

Plugins will generate following client code

```kotlin
package com.example.generated

import com.expediagroup.graphql.client.spring.GraphQLKtorClient
import com.expediagroup.graphql.types.GraphQLResponse
import kotlin.String

const val HELLO_WORLD_QUERY: String = "query HelloWorldQuery {\n    helloWorld\n}"

class HelloWorldQuery: GraphQLClientRequest(HELLO_WORLD_QUERY, "HelloWorldQuery") {
    override fun responseType(): Class<HelloWorldQuery.Result> = HelloWorldQuery.Result::class.java

    data class Result(
        val helloWorld: String
    )
}

suspend fun GraphQLKtorClient<*>.executeHelloWorldQuery(
    request: HelloWorldQuery,
    requestCustomizer: HttpRequestBuilder.() -> Unit = {}
): GraphQLResponse<HelloWorldQuery.Result> = execute(request, requestCustomizer)
```

Generated classes are simple POJOs that implement `GraphQLClientRequest` interface and represent a GraphQL request.

### Executing Operations

`GraphQLKtorClient` uses the Ktor HTTP client to execute the underlying operations and allows you to specify different engines
and HTTP client features. `GraphQLKtorClient` requires target URL to be specified and defaults to fully asynchronous non-blocking
[Coroutine-based IO engine](https://ktor.io/clients/http-client/engines.html#cio). Please refer to [Ktor HTTP client documentation](https://ktor.io/clients/index.html)
for additional details.

```kotlin
package com.example.client

import com.expediagroup.graphql.client.ktor.GraphQLKtorClient
import com.expediagroup.graphql.generated.HelloWorldQuery
import com.expediagroup.graphql.generated.executeHelloWorldQuery
import kotlinx.coroutines.runBlocking
import java.net.URL

fun main() {
    val client = GraphQLKtorClient(url = URL("http://localhost:8080/graphql"))
    runBlocking {
        val helloWorldQuery = HelloWorldQuery()
        val result = client.executeHelloWorldQuery(helloWorldQuery)
        println("hello world query result: ${result.data?.helloWorld}")
    }
    client.close()
}
```
